Fix footer images center issue on smaller devices

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ footer {
 
 .logos {
   width: 50%;
-  margin-left: 100%; /* centering footer images*/
+  padding: 0% 40% 0% 35%;
 }
 
 main {
@@ -57,9 +57,6 @@ a:hover{
   body {
     margin: 5px 0px 0px 0px;
   }
-
-  .logos {
-  margin-left: 65%; /* centering footer images*/
 }
 }
 
